add html and css

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
       p{
         text-align: center;
       }
-      #banner text-align: center
+      #banner {twidth = '400' height = '400'}
       h3{
         text-align: center;
       }
@@ -33,7 +33,7 @@
         这是我的水果店。呵呵。欢迎光临，客人</h1>
         <h2>✴  🎀  其实只卖一个苹果啦  🎀  ✴</h2>
       
-      <img id= "banner" scr=“banana.jpg” width = '400' height = '400'>
+      <img id= "banner" scr=“banana.jpg”/>
       <p> 这是来自天山的苹果，海报高，光照足，雨水多，土地肥沃，一切天然优越的条件使得我们的苹果非常鲜美鲜甜。客人，买一个试试吧。很好吃的。祝你吃的开心。欢迎下次光临
         <p>
       <h3>✶*  🎀  请问需要其他水果吗🎀  *✶</h3>
