--- a/templates/home.html
+++ b/templates/home.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> home page</title>
-    <style>
-      h1{
-        font-size: 20px;
-        font-familyfamily: arial;
-        font-weight: bold;
-        text-align: center;
-      }
-      h2{
-        font-weight: normal;
-        text-align: center;
-      }
-      p{
-        text-align: center;
-      }
-      #banner {twidth = '400' height = '400'}
-      h3{
-        text-align: center;
-      }
-      h3{
-        text-align: center;
-      }
-      button{
-        text-align: center;
-      }
-    </style>
-    
+    <title> home page</title>    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link                                   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <head>
     <body>
-      <h1>
-        这是我的水果店。呵呵。欢迎光临，客人</h1>
-        <h2>✴  🎀  其实只卖一个苹果啦  🎀  ✴</h2>
-      
-      <img id= "banner" scr=“banana.jpg”/>
-      <p> 这是来自天山的苹果，海报高，光照足，雨水多，土地肥沃，一切天然优越的条件使得我们的苹果非常鲜美鲜甜。客人，买一个试试吧。很好吃的。祝你吃的开心。欢迎下次光临
-        <p>
-      <h3>✶*  🎀  请问需要其他水果吗🎀  *✶</h3>
-      <h3>✶*  🎀 点击下方按钮联系我哦。呵呵 🎀  *✶</h3>
-      <button>联系我</button>
+      <div class="container">        
+        <h1 clas="text-center mt-2 mb-4">这是我的水果店，呵呵</h1>
+        <p class="lead">欢迎光临。客人好，非常欢迎使用我们的网站。这是我们水果专卖网站哦。如果看到其他可疑链接可随时举报我们哦。</p>    
+        <img class="img-fluid" scr=“https://c9b0e70b-6e37-4297-a12e-310e114aa2fb-00-1ryhrp0mno64v.riker.replit.dev/static/banana.jpg" width="120" height="90" alt="apple">
+        <div>
+          {%for des in info %}
+            {% include 'fruititem.html' %}     
+          {% endfor %}
+        </div>        
+        <h3 clas="text-center mt-2 mb-4">✶*  🎀  请问需要其他水果吗🎀  *✶</h3>
+        <h3 clas="text-center mt-2 mb-4">✶*  🎀 点击下方按钮联系我哦。呵呵 🎀  *✶</h3>
+        <div class="text-center">
+           <button class="btn btn-primary btn-lg">联系我</button>
+        </div>
+      </div>
     </body>
-  </head>
 </html>
+      
